syntax = "proto3";

package club;

service ClubService {
  rpc CreateClub (CreateClubRequest) returns (CreateClubResponse);
  rpc GetClub (GetClubRequest) returns (GetClubResponse);
  rpc UpdateClub (UpdateClubRequest) returns (UpdateClubResponse);
  rpc DeleteClub (DeleteClubRequest) returns (DeleteClubResponse);
  rpc ListClubs (ListClubsRequest) returns (ListClubsResponse);
}

message CreateClubRequest {
  string name = 1;
  string address = 2;
  string city = 3;
  string province = 4;
  string phone = 5;
  string email = 6;
  string website = 7;
  bool is_federated = 8;
  string description = 9;
  string opening_hours = 10;
  string map_location = 11;
}

message CreateClubResponse {
  string message = 1;
  Club club = 2;
}

message GetClubRequest {
  string id = 1; // UUID
}

message GetClubResponse {
  Club club = 1;
}

message UpdateClubRequest {
  string id = 1; // UUID
  string name = 2;
  string address = 3;
  string city = 4;
  string province = 5;
  string phone = 6;
  string email = 7;
  string website = 8;
  bool is_federated = 9;
  string description = 10;
  string opening_hours = 11;
  string map_location = 12;
}

message UpdateClubResponse {
  string message = 1;
  Club club = 2;
}

message DeleteClubRequest {
  string id = 1; // UUID
}

message DeleteClubResponse {
  string message = 1;
}

message ListClubsRequest {}

message ListClubsResponse {
  repeated Club clubs = 1;
}

message Club {
  string id = 1; // UUID
  string name = 2;
  string address = 3;
  string city = 4;
  string province = 5;
  string phone = 6;
  string email = 7;
  string website = 8;
  bool is_federated = 9;
  string description = 10;
  string opening_hours = 11;
  string map_location = 12;
  string created_at = 13;
  string updated_at = 14;
  repeated Review reviews = 15;
  repeated Tournament tournaments = 16;
}

message Review {
  string id = 1; // UUID
  string comment = 2;
  int32 rating = 3;
}

message Tournament {
  string id = 1; // UUID
  string name = 2;
  string date = 3;
}
